[gd_scene load_steps=9 format=3 uid="uid://c48jsiqrj4ve4"]

[ext_resource type="Script" uid="uid://df5attnfnjnlb" path="res://enemy/scripts/turret.gd" id="1_2a3v4"]
[ext_resource type="Texture2D" uid="uid://bh1quj72s8v7r" path="res://scenes/level00/los_turret/turret_base.png" id="2_m1j5q"]
[ext_resource type="Material" uid="uid://co8x461kq2vk3" path="res://enemy/resource/enemy_shader.tres" id="3_5te02"]
[ext_resource type="Script" uid="uid://30mfkg33ob33" path="res://enemy/scripts/turret_head.gd" id="4_65cm3"]
[ext_resource type="SpriteFrames" uid="uid://cjhbyrexvp54g" path="res://scenes/level00/los_turret/level00.tres" id="4_m1j5q"]

[sub_resource type="Gradient" id="Gradient_6mlxk"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.306667, 0.593333, 0.906667)
colors = PackedColorArray(0.999987, 0.393524, 0.363484, 1, 0.936943, 0, 0.146872, 1, 0.996904, 0.000417245, 0.000221209, 1, 0.84956, 3.29696e-06, 1.54018e-06, 1)
metadata/_snap_count = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q63yx"]
size = Vector2(1097, 286)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5te02"]
size = Vector2(208, 122)

[node name="Turret" type="Node2D"]
script = ExtResource("1_2a3v4")
patrol_pan_angle_deg = 20.0
patrol_pan_speed = 0.2
patrol_center_angle_deg = 15.0

[node name="TurretBase" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_m1j5q")

[node name="VisualTreeRoot" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
material = ExtResource("3_5te02")
position = Vector2(-10, -7)
scale = Vector2(1.07865, 1.03211)
sprite_frames = ExtResource("4_m1j5q")
centered = false
script = ExtResource("4_65cm3")
cooldown_time = 3.0

[node name="Ray" type="RayCast2D" parent="VisualTreeRoot"]
unique_name_in_owner = true
collision_mask = 9

[node name="Beam" type="Line2D" parent="VisualTreeRoot/Ray"]
unique_name_in_owner = true
position = Vector2(53.7709, 15.5022)
points = PackedVector2Array(1.85417, 0)
width = 3.0
gradient = SubResource("Gradient_6mlxk")

[node name="TurretArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurretArea"]
shape = SubResource("RectangleShape2D_q63yx")

[node name="ChargeTime" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ReloadTime" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -9.0
offset_top = 119.0
offset_right = 34.0
offset_bottom = 142.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_5te02")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="ChargeTime" to="." method="_on_charge_time_timeout"]
[connection signal="timeout" from="ReloadTime" to="." method="_on_reload_time_timeout"]
